add_project_arguments('-DHAVE_CONFIG_H=1',        language: langs)
add_project_arguments('-D_GNU_SOURCE=1',          language: langs)
add_project_arguments('-DEFL_BETA_API_SUPPORT=1', language: langs)
add_project_arguments('-DNEED_RUN_IN_TREE=1',     language: langs)
# add_project_arguments('-DELM_INTERNAL_API_ARGESFSDFEFC=1', language: langs)
