# module_files = []
# evas_loader_map = []

eolian_include_directories = []

# ecore_evas_wayland_engine_include_dir = []
# evas_static_list = []

dir_test       = []
dir_example    = []
efl_one_parts  = []
dep_efl_one    = []
dep_efl_one_eo = []
inc_efl_one    = []
sub_efl_one    = []
dep_etool      = []