module_files = []
# evas_loader_map = []

eo_gen_include_directories = []

# ecore_evas_wayland_engine_include_dir = []
# evas_static_list = []

dir_test       = []
dir_example    = []
efl_one_parts  = []
inc_efl_one    = []
sub_efl_one    = []

dep_shared     = []
dep_core       = []
dep_efl_one    = []
dep_efl_one_eo = []

summary_dir    = {}
summary_info   = {}
summary_mem    = {}
summary_opt    = {}
summary_efl    = {}

